# rust-examples

./: Cargo.toml  README.md  data.json  example.xml  test.json
