[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitset-core = "0.1.1"
chrono = "0.4.30"
crate = "0.0.2"
extern = "0.0.0"
map-macro = "0.2.6"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.7.0"
substring = "1.4.5"
time = "0.3.28"
