[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitset-core = "0.1.1"
chrono = "0.4.30"
crate = "0.0.2"
extern = "0.0.0"
map-macro = "0.2.6"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.107"
substring = "1.4.5"
time = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
